--- a/.render.yaml
+++ b/.render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: polymarket-v2
     env: docker
-    branch: master
+    branch: main
     dockerfilePath: Dockerfile
     autoDeploy: true
     envVars:
